@@ -1,16 +1,16 @@
 package net.geant.nmaas.portal.api.user;
 
-import com.google.common.collect.ImmutableMap;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.JwtException;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.extern.slf4j.Slf4j;
 import net.geant.nmaas.notifications.MailAttributes;
 import net.geant.nmaas.notifications.NotificationEvent;
 import net.geant.nmaas.notifications.templates.MailType;
-import net.geant.nmaas.orchestration.jobs.UserDomainAssignmentJob;
 import net.geant.nmaas.portal.api.domain.PasswordChange;
 import net.geant.nmaas.portal.api.domain.PasswordReset;
 import net.geant.nmaas.portal.api.domain.UserBase;
+import net.geant.nmaas.portal.api.domain.UserListEntry;
 import net.geant.nmaas.portal.api.domain.UserRequest;
 import net.geant.nmaas.portal.api.domain.UserRoleView;
 import net.geant.nmaas.portal.api.domain.UserView;
@@ -18,26 +18,26 @@ import net.geant.nmaas.portal.api.domain.UserViewMinimal;
 import net.geant.nmaas.portal.api.exceptions.MissingElementException;
 import net.geant.nmaas.portal.api.exceptions.ProcessingException;
 import net.geant.nmaas.portal.api.security.JWTTokenService;
+import net.geant.nmaas.portal.events.UserDomainAssignmentEvent;
 import net.geant.nmaas.portal.exceptions.ObjectNotFoundException;
 import net.geant.nmaas.portal.persistent.entity.Domain;
 import net.geant.nmaas.portal.persistent.entity.Role;
 import net.geant.nmaas.portal.persistent.entity.User;
 import net.geant.nmaas.portal.persistent.entity.UserRole;
-import net.geant.nmaas.portal.persistent.entity.WebhookEventType;
-import net.geant.nmaas.portal.persistent.repositories.WebhookEventRepository;
 import net.geant.nmaas.portal.persistent.results.UserLoginDate;
 import net.geant.nmaas.portal.service.ApplicationInstanceService;
 import net.geant.nmaas.portal.service.DomainService;
 import net.geant.nmaas.portal.service.UserLoginRegisterService;
 import net.geant.nmaas.portal.service.UserService;
-import net.geant.nmaas.scheduling.ScheduleManager;
 import net.geant.nmaas.utils.captcha.ValidateCaptcha;
 import org.apache.commons.lang3.StringUtils;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -56,7 +56,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.security.Principal;
-import java.time.LocalDateTime;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -69,17 +68,18 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_DOMAIN_ADMIN;
+import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_GROUP_DOMAIN_ADMIN;
+import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_GROUP_MANAGER;
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_GUEST;
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_OPERATOR;
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_SYSTEM_ADMIN;
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_TOOL_MANAGER;
 import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_USER;
-import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_GROUP_DOMAIN_ADMIN;
-import static net.geant.nmaas.portal.persistent.entity.Role.ROLE_GROUP_MANAGER;
 
 @RestController
 @RequestMapping("/api")
 @Slf4j
+@Tag(name = "Users", description = "User and role management API")
 public class UsersController {
 
     private static final String USER_NOT_FOUND_ERROR_MESSAGE = "User not found.";
@@ -105,8 +105,6 @@ public class UsersController {
     private final UserLoginRegisterService userLoginService;
 
     private final ApplicationInstanceService instanceService;
-    private final WebhookEventRepository webhookEventRepository;
-    private final ScheduleManager scheduleManager;
 
     @Autowired
     public UsersController(UserService userService,
@@ -116,9 +114,7 @@ public class UsersController {
                            JWTTokenService jwtTokenService,
                            ApplicationEventPublisher eventPublisher,
                            UserLoginRegisterService userLoginService,
-                           ApplicationInstanceService instanceService,
-                           WebhookEventRepository webhookEventRepository,
-                           ScheduleManager scheduleManager) {
+                           ApplicationInstanceService instanceService) {
         this.userService = userService;
         this.domainService = domainService;
         this.modelMapper = modelMapper;
@@ -127,8 +123,6 @@ public class UsersController {
         this.eventPublisher = eventPublisher;
         this.userLoginService = userLoginService;
         this.instanceService = instanceService;
-        this.webhookEventRepository = webhookEventRepository;
-        this.scheduleManager = scheduleManager;
     }
 
     @GetMapping("/users")
@@ -166,9 +160,26 @@ public class UsersController {
                 .collect(Collectors.toList());
     }
 
+    @GetMapping("/users/list")
+    @PreAuthorize("hasRole('ROLE_SYSTEM_ADMIN')")
+    @Transactional
+    public Page<UserListEntry> getUsersList(@PageableDefault(page = 0, size = 15, sort = "id") Pageable pageable,
+                                            @RequestParam(required = false) String searchValue,
+                                            Principal principal) {
+        return userService.findAllListEntry(pageable, searchValue);
+    }
+
+    @GetMapping("/domains/{domainId}/users/list")
+    @PreAuthorize("hasPermission(#domainId, 'domain', 'OWNER')")
+    public Page<UserListEntry> getUsersListDomain(@PageableDefault(page = 0, size = 15, sort = "id") Pageable pageable,
+                                                  @RequestParam(required = false) String searchValue,
+                                                  @PathVariable Long domainId) {
+        return userService.findAllInDomainListEntry(domainId, pageable, searchValue);
+    }
+
     @GetMapping(value = "/users/{userId}")
     @PreAuthorize("hasRole('ROLE_SYSTEM_ADMIN') or hasRole('ROLE_DOMAIN_ADMIN')")
-    public UserBase retrieveUser(@PathVariable("userId") Long userId, Principal principal) {
+    public UserBase getUser(@PathVariable("userId") Long userId, Principal principal) {
         User user = getUser(userId);
         User owner = this.userService.findByUsername(principal.getName()).orElseThrow(
                 () -> new RuntimeException("User with username: " + principal.getName() + " does not exist"));
@@ -217,10 +228,8 @@ public class UsersController {
         userDetails.setDefaultDomain(userRequest.getDefaultDomain());
         userService.update(userDetails);
         if (!StringUtils.isEmpty(message)) {
-            log.info(String.format("Data of user [%s] with role [%s] were updated. The following changes are: [%s] ",
-                    userDetails.getUsername(),
-                    userRoles,
-                    message));
+            log.info("Data of user [{}] with role [{}] were updated. The following changes are: [{}] ",
+                    userDetails.getUsername(), userRoles, message);
         }
     }
 
@@ -237,21 +246,23 @@ public class UsersController {
                 .filter(userRole ->
                         !(userRole.getRole().equals(ROLE_GUEST) && userRole.getDomain().getId().equals(globalDomainId))
                 )
-                .collect(Collectors.toList());
-        if (notGuestInGlobalDomainRole.size() > 0) {
+                .toList();
+        if (!notGuestInGlobalDomainRole.isEmpty()) {
             throw new ProcessingException("User cannot be deleted because he belongs to at least one domain");
         }
-        if (!this.instanceService.findAllByOwner(userId).isEmpty()) {
+        if (!instanceService.findAllByOwner(userId).isEmpty()) {
             throw new ProcessingException("User cannot be deleted because he had deployed at least one instance");
         }
-        this.userService.deleteById(userId);
+        userService.deleteById(userId);
     }
 
     @GetMapping("/users/{userId}/roles")
     @PreAuthorize("hasRole('ROLE_SYSTEM_ADMIN') or hasRole('ROLE_DOMAIN_ADMIN')")
     public Set<UserRoleView> getUserRoles(@PathVariable Long userId) {
         User user = getUser(userId);
-        return user.getRoles().stream().map(ur -> modelMapper.map(ur, UserRoleView.class)).collect(Collectors.toSet());
+        return user.getRoles().stream()
+                .map(ur -> modelMapper.map(ur, UserRoleView.class))
+                .collect(Collectors.toSet());
     }
 
     @DeleteMapping("/users/{userId}/roles")
@@ -282,12 +293,8 @@ public class UsersController {
             domainService.removeMemberRole(domain.getId(), user.getId(), userRole.getRole());
             final User adminUser = userService.findByUsername(principal.getName()).orElseThrow(() -> new ObjectNotFoundException(USER_NOT_FOUND_ERROR_MESSAGE));
             final String adminRoles = getRoleAsString(adminUser.getRoles());
-            log.info(String.format("User [%s] with role [%s] removed role [%s] from user [%s] in domain [%d]",
-                    principal.getName(),
-                    adminRoles,
-                    userRole.getRole().authority(),
-                    user.getUsername(),
-                    userRole.getDomainId()));
+            log.info("User [{}] with role [{}] removed role [{}] from user [{}] in domain [{}]",
+                    principal.getName(), adminRoles, userRole.getRole().authority(), user.getUsername(), userRole.getDomainId());
             domainService.addGlobalGuestUserRoleIfMissing(userId);
         } catch (ObjectNotFoundException e) {
             throw new MissingElementException(e.getMessage());
@@ -300,7 +307,7 @@ public class UsersController {
     public void setAcceptance(@PathVariable String username) {
         try {
             setAcceptanceFlags(username);
-            log.info(String.format("User [%s] accepted Terms of Use and Privacy Policy", username));
+            log.info("User [{}] accepted Terms of Use and Privacy Policy", username);
         } catch (ProcessingException err) {
             throw new MissingElementException(err.getMessage());
         }
@@ -347,7 +354,7 @@ public class UsersController {
         domainService.addMemberRole(domainId, user.getId(), Role.ROLE_GUEST);
         domainService.addGlobalGuestUserRoleIfMissing(user.getId());
         userService.update(user);
-        this.sendMail(this.userService.findAllUsersWithAdminRole().get(0), MailType.NEW_SSO_LOGIN, ImmutableMap.of("newUser", user.getUsername()));
+        this.sendMail(this.userService.findAllUsersWithAdminRole().get(0), MailType.NEW_SSO_LOGIN, Map.of("newUser", user.getUsername()));
     }
 
     @PostMapping("/users/reset/notification")
@@ -355,7 +362,7 @@ public class UsersController {
     public void sendResetPasswordNotification(@RequestBody String email) {
         User user = userService.findByEmail(email);
         checkSSOUser(user);
-        this.sendMail(modelMapper.map(user, UserView.class), MailType.PASSWORD_RESET, ImmutableMap.of("accessURL", generateResetPasswordUrl(this.jwtTokenService.getResetToken(email))));
+        this.sendMail(modelMapper.map(user, UserView.class), MailType.PASSWORD_RESET, Map.of("accessURL", generateResetPasswordUrl(this.jwtTokenService.getResetToken(email))));
     }
 
     private String generateResetPasswordUrl(String token) {
@@ -519,20 +526,19 @@ public class UsersController {
 
         try {
             domainService.addMemberRole(domain.getId(), user.getId(), role);
-            if (!domain.equals(globalDomain)){
-                webhookEventRepository.findIdByEventType(WebhookEventType.USER_ASSIGNMENT).forEach(id -> scheduleManager.createOneTimeJob(UserDomainAssignmentJob.class, "UserDomainAssignmentJobCreate_" + id + "_user" + user.getId()+ "_domain" + domain.getId()+"_" + LocalDateTime.now(), Map.of("webhookId", id, "domainId", domain.getId(), "userId", user.getId(), "role", role.name(), "action", "create")));
+            if (!domain.equals(globalDomain)) {
+                eventPublisher.publishEvent(new UserDomainAssignmentEvent(this, domain.getId(), user.getId(), role.name(), "create"));
             }
 
             final User adminUser = userService.findByUsername(principal.getName()).orElseThrow(() -> new ObjectNotFoundException(USER_NOT_FOUND_ERROR_MESSAGE));
             final String adminRoles = getRoleAsString(adminUser.getRoles());
 
-            log.info(String.format("User [%s] with role [%s] added role [%s] to user [%s] in domain [%d].",
+            log.info("User [{}] with role [{}] added role [{}] to user [{}] in domain [{}].",
                     principal.getName(),
                     adminRoles,
                     userRole.getRole().authority(),
                     user.getUsername(),
-                    domain.getId()
-            ));
+                    domain.getId());
         } catch (ObjectNotFoundException e) {
             throw new MissingElementException(e.getMessage());
         }
@@ -556,8 +562,8 @@ public class UsersController {
             final User adminUser = userService.findByUsername(principal.getName()).orElseThrow(() -> new ObjectNotFoundException(USER_NOT_FOUND_ERROR_MESSAGE));
             final String adminRoles = getRoleAsString(adminUser.getRoles());
             final Domain globalDomain = domainService.getGlobalDomain().orElse(null);
-            if (!domain.equals(globalDomain)){
-                webhookEventRepository.findIdByEventType(WebhookEventType.USER_ASSIGNMENT).forEach(id -> scheduleManager.createOneTimeJob(UserDomainAssignmentJob.class, "UserDomainAssignmentJobDelete_" + id + "_user" + user.getId()+ "_domain" + domain.getId()+"_" + LocalDateTime.now(), Map.of("webhookId", id, "domainId", domain.getId(), "userId", user.getId(), "role", role.name(), "action", "delete")));
+            if (!domain.equals(globalDomain)) {
+                eventPublisher.publishEvent(new UserDomainAssignmentEvent(this, domain.getId(), user.getId(), role.name(), "delete"));
             }
 
             log.info(String.format("User [%s] with role [%s] removed role [%s] of user name [%s] in domain [%d].",
@@ -593,7 +599,7 @@ public class UsersController {
                     isEnabledFlag ? "activated" : "deactivated",
                     getUser(userId).getUsername());
             if (isEnabledFlag) {
-                this.sendMail(modelMapper.map(user, UserView.class), MailType.ACCOUNT_ACTIVATED, ImmutableMap.of("portalURL", portalAddress != null ? portalAddress : ""));
+                this.sendMail(modelMapper.map(user, UserView.class), MailType.ACCOUNT_ACTIVATED, Map.of("portalURL", portalAddress != null ? portalAddress : ""));
             } else {
                 this.sendMail(modelMapper.map(user, UserView.class), MailType.ACCOUNT_BLOCKED, Collections.emptyMap());
             }
@@ -608,6 +614,13 @@ public class UsersController {
     @Transactional
     public void setDefaultLanguage(@PathVariable Long userId, @RequestParam("defaultLanguage") final String defaultLanguage) {
         this.userService.setUserLanguage(userId, defaultLanguage);
+    }
+
+    @PatchMapping("/users/{userId}/theme")
+    @ResponseStatus(HttpStatus.ACCEPTED)
+    @Transactional
+    public void setDefaultTheme(@PathVariable Long userId, @RequestParam("defaultTheme") final String defaultTheme) {
+        this.userService.setUserTheme(userId, defaultTheme);
     }
 
     @GetMapping(value = "/users/search", params = {"searchPart"})
@@ -645,9 +658,9 @@ public class UsersController {
                 .collect(Collectors.toList());
 
         return allUsers.stream()
-                    .filter(user -> user.getEmail().toLowerCase().contentEquals(search))
-                    .map(this::mapMinimalUser).collect(Collectors.toList());
-        }
+                .filter(user -> user.getEmail().toLowerCase().contentEquals(search))
+                .map(this::mapMinimalUser).collect(Collectors.toList());
+    }
 
     private Role convertRole(String userRole) {
         Role role;
@@ -742,6 +755,14 @@ public class UsersController {
         UserViewMinimal userViewMinimal = modelMapper.map(user, UserViewMinimal.class);
         userViewMinimal.setHasSshKeys(!user.getSshKeys().isEmpty());
         return userViewMinimal;
+    }
+
+    private UserListEntry mapUser(UserListEntry entry, final Map<Long, UserLoginDate> userLoginDateMap) {
+        if (userLoginDateMap.containsKey(entry.getId())) {
+            entry.setLastSuccessfulLoginDate(userLoginDateMap.get(entry.getId()).getMaxLoginDate());
+            entry.setFirstLoginDate(userLoginDateMap.get(entry.getId()).getMinLoginDate());
+        }
+        return entry;
     }
 
 }
